# flight_fare_app

./: README.md  pyproject.toml
app/backend/: Dockerfile  main.py  requirements.txt
app/frontend/: Dockerfile  main_frontend.py  requirements.txt
models/: categorical_features.joblib  feature_columns.joblib  linear_reg_pipeline1.joblib  median_traveldistance.csv  xgb.pkl
