[tool.poetry]
name = "at3-app"
version = "0.1.0"
description = ""
authors = ["Ratana-Sovann <sovann.ratana@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"
streamlit = "^1.39.0"
lightgbm = "^4.5.0"
xgboost = "^2.1.2"
catboost = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
